# rtos_lvgl_skill

./: .gitattributes  .gitignore  .mcp.json  CHANGELOG.md  INSTALL.md  QUICKSTART.md  README.md  SKILL.md  USAGE_GUIDE.md  onboard.md  pyproject.toml
.claude/: settings.local.json
.codex/: config.toml  hooks.json
agents/: openai.yaml
archive/: README.md
assets/lvgl_regression_sandbox_template/: CMakeLists.txt  lv_conf.h  sandbox_manifest.json
assets/lvgl_regression_sandbox_template/baselines/: probe.ppm
assets/lvgl_regression_sandbox_template/src/: regression_main.c  ui_under_test_default.c  ui_under_test_default.h
docs/: multi_page_mvp_plan.md
examples/: README.md  app_mvp.h  bad_av_clock_jitter.c  bad_av_dma_buffer_lifecycle.c  bad_av_pipeline_blocking.c  bad_cjson_leak.c  bad_cross_layer_dependency.c  bad_display_no_init.c  bad_god_module.c  bad_gpio_no_config.c  bad_isr_blocking.c  bad_isr_printf.c  bad_lvgl_cross_thread.c  bad_media_format_mismatch.c  bad_nvs_no_commit.c  bad_ota_no_rollback.c  bad_prompt_no_detach.c  bad_queue_stack_pointer.c  bad_reconnect_no_backoff.c  bad_sleep_no_save.c  bad_unchecked_return.c  bad_wss_blocking.c  good_av_clock_jitter.c  good_av_dma_buffer_lifecycle.c  good_av_pipeline_sync.c  good_boot_sequence.c  good_checked_return.c  good_display_init.c  good_gpio_config.c  good_logging.c  good_media_format_contract.c  good_module_boundary.c  good_module_boundary.h  good_mvp_pattern.c  good_nvs_commit.c  good_ota_update.c  good_presenter_consumer.c  good_reconnect_backoff.c  good_sleep_save.c  good_voice_prompt_uplink.c  (+2 more)
forward_tests/: README.md  run_forward_tests.py  test_auto_fix_plan.md  test_code_review.md  test_codegen_gate.md  test_crash_analysis.md  test_generate_module.md  test_generate_project.md  test_rtos_review.md  test_supervisor_run.md
frameworks/: cmsis-rtos.json  esp-idf.json  fatfs.json  littlefs.json  lvgl.json  lwip.json  mbedtls.json  stm32-hal.json  tinyusb.json  zephyr.json
freertos-skill-lite/: CHANGELOG.md  INSTALL.md  LICENSE  SKILL.md  bk_build.env.example  bk_build.ps1  bk_build.sh
golden_pages/: README.md
lvgl-ui-mcp/: .mcp.json  README.md  pyproject.toml  server.py
mcp/: README.md  app_codegen.py  app_v21_codegen.py  app_validator.py  asset_contract.py  assets.py  codegen.py  design_asset_policy.py  high_level_schemas.py  high_level_tools.py  image_io.py  initial_loading_auto.py  interactive_scene_auto.py  lvgl_analysis.py  lvgl_capabilities.py  lvgl_codegen.py  lvgl_compare.py  lvgl_compile_gate.py  lvgl_fonts.py  lvgl_preflight.py  lvgl_preview.py  lvgl_refine.py  lvgl_run.py  lvgl_sim_resolver.py  lvgl_ui.py  manifest_v2.py  mcp_runtime.py  mqtt_client.py  mqtt_schemas.py  mqtt_server.py  ota_device.py  ota_firmware.py  ota_http.py  ota_protocol.py  ota_schemas.py  ota_server.py  page_input.py  refine_guard.py  regression.py  resources.py  (+9 more)
native/lvgl_sim_runner/: ASSET_PACK.md  CMakeLists.txt  FONT_PREVIEW.md  asset_pack.c  asset_pack.h  font_registry.c  font_registry.h  framebuffer_display.c  framebuffer_display.h  lv_conf_v9.h  main.c  object_tree_dump.c  object_tree_dump.h  scene_decoder.c  scene_decoder.h
native/lvgl_ui_testkit/: CMakeLists.txt  README.md
native/lvgl_ui_testkit/include/: lvgl_ui_testkit.h
native/lvgl_ui_testkit/src/: testkit_main.c
product_profiles/: bk.json  esp32.json  jl.json  stm32.json  zephyr.json
prompts/: audio_dma_pingpong.txt  av_clock_jitter.txt  av_codec_format.txt  av_dma_buffer_lifecycle.txt  av_pipeline_sync.txt  backpressure_recovery_config.txt  boot_wdt_lifecycle.txt  cjson_safe_parse.txt  coding_style.txt  crash_log_decode.txt  deadlock_lock_order.txt  error_handling.txt  freertos_sync_primitives.txt  hotpath_critical_budget.txt  inter_task_communication.txt  lcd_display_driver.txt  logging_debug.txt  low_power_management.txt  lvgl_thread_safety.txt  lvgl_v8_v9_diff.txt  mbedtls_wss_memory.txt  memory_alloc_optimize.txt  memory_ownership.txt  module_contract_topology.txt  multi_core_ipc.txt  network_resilience.txt  ota_update_safety.txt  peripheral_shutdown_safety.txt  queue_event_bus.txt  rtos_bootstrap_zephyr.txt  runtime_efficiency_contracts.txt  sdk_trim_prune.txt  secrets_kconfig.txt  session_strict_mode.txt  software_architecture_design.txt  state_machine_patterns.txt  test_mode_macro.txt  timeout_lifecycle_observability.txt  timer_management.txt  voice_asr_uplink.txt
references/: CHANGELOG_archive.md  acceptance_criteria.md  analysis_report_ir.md  checker_matrix.md  claude_code.md  codegen_contract.md  constraint_bluetooth_protocol.md  constraint_detail.md  constraint_graph.md  constraint_index.md  constraint_media.md  constraint_memory.md  constraint_ota.md  constraint_platform.md  constraint_quick_index.md  constraint_recover.md  constraint_review.md  constraint_rtos.md  constraint_versions.json  constraint_voice.md  context_route_quality.md  core_rules.md  core_rules_quick.md  field_experience_log.md  framework_conflict_matrix.md  git_commit_style.md  iteration_log.md  iteration_log_archive_2026Q2.md  lite_manual_checklist.md  log_symptom_quality_report_schema.json  log_symptom_route_conflict_allowlist.json  log_symptom_routes.json  log_symptom_routes_allowlist_governance.md  log_symptom_routes_quality_policy.json  logging_management_constraints.md  lvgl_architecture_references.md  lvgl_design_codegen_quick.md  lvgl_image_to_code_contract.md  lvgl_interactive_delivery_contract.md  lvgl_validation_contract.md  (+22 more)
scene_presets/: audio_video.json  low_power_sensor.json  ota_network.json  pure_controller.json  voice_screen.json
schemas/: lvgl_analysis_report_v1.schema.json  lvgl_asset_manifest_v1.schema.json  lvgl_ui_spec_v2.schema.json  lvgl_validation_report_v1.schema.json
scripts/: bump_version.py  check_architecture_sync.py  check_checker_registry.py  check_codegen_matrix.py  check_installed_runtime.py  check_installed_skill_sync.py  check_lite_sync.py  check_log_symptom_quality_gate.py  check_log_symptom_routes.py  check_log_triage_matrix.py  check_lvgl_regression.py  check_release_contract.py  check_rule_coverage.py  (+43 more)
(+587 files in other folders)
