[project]
name = "freertos-embedded-architect"
version = "45.0.0"
description = "FreeRTOS firmware review and LVGL design-to-code tooling"
requires-python = ">=3.10"
dependencies = [
    "cryptography>=42,<46",
    "paho-mqtt>=1.6,<3",
    "pyserial>=3.5,<4",
]

[project.optional-dependencies]
vision = [
  "Pillow>=10,<13",
  "numpy>=1.26,<3",
]

ocr = [
  "rapidocr-onnxruntime>=1.3,<2",
]

regression = [
  "Pillow>=10,<13",
  "numpy>=1.26,<3",
]

test = [
  "pytest>=8,<9",
]

dev = [
  "ruff>=0.6,<1",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
