[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "lvgl-ui-mcp"
version = "0.1.0"
description = "MCP server for design-driven LVGL code generation and SSIM verification"
requires-python = ">=3.10"

[project.scripts]
lvgl-ui-mcp = "server:main"

[tool.setuptools]
py-modules = ["server"]

[tool.pytest.ini_options]
testpaths = ["../tests"]
addopts = "-q"
